# deepseek-for-free

./: .env.example  .gitignore  LICENSE  README.md  build.bat  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/deepseek4free/: __init__.py  config.py  exceptions.py
src/deepseek4free/cli/: __init__.py  chat.py
src/deepseek4free/client/: __init__.py  api.py  sse.py  transport.py
src/deepseek4free/cloudflare/: __init__.py  bypass_server.py  bypasser.py  cookie_refresher.py
src/deepseek4free/pow/: __init__.py  solver.py
src/deepseek4free/server/: __init__.py  app.py  dependencies.py  errors.py  schemas.py  session_manager.py
src/deepseek4free/server/ollama_compat/: app.py  dependencies.py  mapping.py  routes.py  schemas.py  session_cache.py
src/deepseek4free/server/routes/: __init__.py  files.py  health.py  messages.py  sessions.py
tests/integration/: test_api_smoke.py
tests/unit/: test_ollama_mapping.py  test_ollama_routes.py  test_ollama_session_cache.py  test_pow_response_format.py  test_session_manager.py  test_sse.py
